--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,20 @@
 {
   "manifest_version": 3,
   "name": "Yunxiao Polish",
+  "description": "aliyun devops polish",
   "version": "0.0.1",
-  "action": {},
+  "action": {
+    "default_icon": {
+      "16": "images/icon.png",
+      "48": "images/icon.png",
+      "128": "images/icon.png"
+    }
+  },
+  "icons": {
+    "16": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  },
   "content_scripts": [
     {
       "js": ["scripts/sprint.js"],
