修复切换页面的问题

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     {
       "js": ["scripts/sprint.js"],
       "css": ["styles/sprint.css"],
-      "matches": ["https://devops.aliyun.com/*/sprint/*"]
+      "matches": ["https://devops.aliyun.com/projex/project/*"]
     }
   ]
 }
